2002-01-07  Shiro Takeda  <zbc08106@park.zero.ad.jp>

	* w3m.el (w3m-bold-face, w3m-underline-face): New faces.
	(w3m-fontify-bold): Use `w3m-bold-face' instead of `bold'.
	(w3m-fontify-underline): Use `w3m-underline-face' instead of
	`underline'.

2002-01-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-w32-browser-with-fiber): Fix handling of the local url.

	* w3m-util.el (w3m-url-local-p): Fix its regexp for Windows.

2002-01-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-about-header): Protect against null title.
	(w3m-arrived-setup): Ignore database of arrived URLs in too old
	style.

2002-01-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-url-encode-string): Add a period to the set of
	characters which are not encoded.
	From Fabrice Bauzac <noon@noon.dnsalias.net>

2001-12-31  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-add-local-hook): New function.
	(w3m-current-position): New buffer local variable.
	(w3m-store-current-position): New hook function.
	(w3m-print-this-url-after-command): New hook funtcion.
	(w3m-buffer-setup): Regist these hook functions.
	(w3m-header-line-location-title-face): Integrated with the
	defition in w3m-e21.el
	(w3m-header-line-location-content-face): Ditto.
	(w3m-header-line-map): Ditto.
	(w3m-header-line-insert): Renamed from `w3m-insert-header-line'.

	* w3m-e21.el (w3m-header-line-location-title-face): Integrated to
	the defition in w3m.el.
	(w3m-header-line-location-content-face): Ditto.
	(w3m-header-line-map): Ditto.
	(w3m-setup-header-line): Clean up.
	(w3m-insert-header-line): Removed.

2001-12-30  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-url-to-file-name): Fix its regexp.

2001-12-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-print-this-url): Display a message when it is called
	interactively.

2001-12-29  OHASHI Akira  <bg66@koka-in.org>

	* w3m.el (w3m-print-this-url): Don't print any messages when
	there is no url or form under point.
